--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: <span class="locs"></span></p>
+
+    <section class="loactions-container">
+
+    </section>
     
 
     <script type="module" src="js/app.controller.js"></script>
